package mobilefactory.production.ios;

import mobilefactory.mobileComponent.Camera;

public class IOSCamera extends Camera {
}
