@startuml

title __IOS's Class Diagram__\n

  namespace mobilefactory {
    namespace production.ios {
      class mobilefactory.production.ios.IOSAntenna {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.ios {
      class mobilefactory.production.ios.IOSBattery {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.ios {
      class mobilefactory.production.ios.IOSCamera {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.ios {
      class mobilefactory.production.ios.IOSIPhone11 {
          + IOSIPhone11()
          + producing()
      }
    }
  }
  

  mobilefactory.production.ios.IOSAntenna -up-|> mobilefactory.mobileComponent.Antenna
  mobilefactory.production.ios.IOSBattery -up-|> mobilefactory.mobileComponent.Battery
  mobilefactory.production.ios.IOSCamera -up-|> mobilefactory.mobileComponent.Camera
  mobilefactory.production.ios.IOSIPhone11 -up-|> mobilefactory.MobilePhone
  mobilefactory.production.ios.IOSIPhone11 o-- mobilefactory.MobilePhoneFactory : mobilePhoneFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
